<resources>
    <string name="app_name">Parent App</string>
    <string name="version_date">12/06/2021</string>
    <string name="main_title">Main</string>
    <string name="children_title">Configure Children</string>
    <string name="children_edit_title">Children Edit</string>
    <string name="whose_turn_title">Tasks History</string>
    <string name="whose_turn_edit_title">Task Edit</string>
    <string name="whose_turn_history_title">Whose Turn History</string>
    <string name="coin_flip_title">Coin Flip</string>
    <string name="coin_flip_history_title">Coin flip history</string>
    <string name="timer_title">Timeout Timer</string>
    <string name="take_breath_title">Take Breath</string>
    <string name="take_breath_heading">Let\'s take N breath(s)</string>
    <string name="btn_1min">1 min</string>
    <string name="btn_2min">2 min</string>
    <string name="btn_3min">3 min</string>
    <string name="btn_5min">5 min</string>
    <string name="btn_10min">10 min</string>
    <string name="shared_pref_key">ParentAppSharedPref</string>
    <string name="shared_pref_coin_flip_history_key">ParentAppCoinFlipHistory</string>
    <string name="shared_pref_children_list_key">ChildrenListKey</string>
    <string name="shared_pref_spinner_children_list_key">SpinnerChildrenListKey</string>
    <string name="shared_pref_suggested_child_key">LastChildPickedHistory</string>
    <string name="shared_pref_is_finished_key">IsFinishedKey</string>
    <string name="shared_pref_is_flipped_key">IsFlippedKey</string>
    <string name="shared_pref_tasks_list_key">TasksListKey</string>
    <string name="shared_pref_turns_list_key">TurnsListKey</string>
    <string name="shared_pref_breaths_key">BreathsKey</string>
    <string name="help_screen_title">Help</string>
    <string name="help_text_box_content">\tI. Main Menu - Icon Sources:
        \n1. https://www.pngaaa.com/detail/490986
        \n2. https://www.flaticon.com/free-icon/children_3886660
        \n3. https://www.pinclipart.com/pindetail/oxiwxw_this-is-an-image-of-a-clipboard-report/
        \n4. https://www.pngaaa.com/detail/2802581
        \n5. https://www.pngaaa.com/detail/473824
        \n6. Layout Inspiration: https://youtu.be/LOcD1evBcSA
        \n\n\tII. Coin Flip Activity:
        \n1. Custom Spinner Tutorial: https://youtu.be/GeO5F0nnzAw
        \n2. Coin flip GIF: https://i.pinimg.com/originals/cc/47/83/cc4783a977efbb9cd2a74d6761d7d8d3.gif
        \n\n\tIII. Timeout Timer Activity:
        \n1. The countdown timer: https://youtu.be/MDuGwI6P-X8
        \n2. Timer Running in background: https://youtu.be/lvibl8YJfGo
        \n3. Send notification when timer done: https://www.tutorialspoint.com/how-to-create-android-notification-with-broadcastreceiver
        \n4. Customize minutes: https://youtu.be/7dQJAkjNEjM
        \n5. Adding sound and vibration: https://stackoverflow.com/questions/31398381/how-to-add-custom-notification-sound-in-android
        \n6. All images used in timer part:
        \nhttps://www.clipartmax.com/middle/m2i8K9m2b1G6K9m2_calm-clip-art/
        \nhttps://www.clipartmax.com/middle/m2i8N4b1m2N4d3Z5_when-the-district-operates-under-a-90-minute-delay-alarm-clock-clip/
        \nhttps://tinyurl.com/timeIsUpImage
        \n7. Progress Bar Animation:
        \nhttps://youtu.be/YsHHXg1vbcc
        \n8. Add button for rate timer options:
        \nhttps://youtu.be/oh4YOj9VkVE
        \n\n\tIV. Take Breath Activity:
        \n1. Circle image from take breath:
        \nhttps://www.pngkit.com/png/full/160-1602188_circle-png.png
    </string>
    <string name="listOfMembers">Team Name: Boron\n1- Jing Luo - jla787\n2- Ngan Nguyen - nnn2\n3- Fatemeh Kiannejad - fkiannej\n4- Wenqing Liu - wla161\n</string>
    <string name="membersName">Members</string>
    <string name="copyrightName">Copyright</string>
    <string name="image_source_dialog_title">Select image from: </string>
    <string name="childWants">\ wants: \</string>
    <string name="no_task_message">You have no task yet!</string>
    <string name="add_task_instruction">Click + button to enter new task!</string>
    <string name="add_new_task_title">Task Name</string>
    <string name="task_save_button">SAVE</string>
    <string name="task_delete_button">DELETE</string>
    <string name="pop_up_task_field">Task:</string>
    <string name="pop_up_child_field">Child\'s turn:</string>
    <string name="confirm_child_turn">Child finished their turn</string>
    <string name="add_new_child_for_task">Please Add New Child in Configure Children</string>
    <string name="no_turn_record_message">No child has confirmed their turn for this task!</string>
    <string name="breath_in">Hold the button for at least 3 seconds to breaths in</string>
    <string name="button_breath_skip">Skip</string>
    <string name="breath_in_transition_help">Release button and breath out</string>
    <string name="breath_out_indicate_message">Time to breath out!</string>
    <string name="button_breath_out">Out</string>
    <string name="button_breath_in">In</string>
    <string name="button_breath_done">Good job</string>
    <string-array name="imageSourceOptions">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
</resources>