<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDE8EC"
    tools:context=".TimerActivity">

    <View
        android:id="@+id/view"
        android:layout_width="410dp"
        android:layout_height="286dp"
        android:background="#C5DBE3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="302dp"
        android:layout_height="111dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="00:00"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/btn3min"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="@+id/btn1min"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.205" />

    <ImageButton
        android:id="@+id/imgBtnStart"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_below="@+id/txtTimer"
        android:layout_alignBottom="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnPause"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/imgBtnReset"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.955"
        app:srcCompat="@drawable/start" />

    <ImageButton
        android:id="@+id/imgBtnResetWhenStop"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="centerInside"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnPause"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/imgBtnReset"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.955"
        app:srcCompat="@drawable/reset"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="629dp" />

    <ImageButton
        android:id="@+id/imgBtnReset"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_alignBottom="@+id/imgBtnStart"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="centerInside"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imgBtnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBtnStart"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/reset" />

    <ImageButton
        android:id="@+id/imgBtnPause"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_alignBottom="@+id/imgBtnStart"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="centerInside"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imgBtnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pause" />

    <ImageButton
        android:id="@+id/imgBtnResume"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_alignStart="@+id/imgBtnPause"
        android:layout_alignTop="@+id/imgBtnPause"
        android:layout_alignEnd="@+id/imgBtnPause"
        android:layout_alignBottom="@+id/imgBtnPause"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="centerInside"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/imgBtnPause"
        app:layout_constraintStart_toStartOf="@+id/imgBtnPause"
        app:layout_constraintTop_toTopOf="@+id/imgBtnPause"
        app:srcCompat="@drawable/resume" />

    <Button
        android:id="@+id/btn3min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/btn_3min"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btn1min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/btn_1min"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/btn2min"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btn2min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/btn_2min"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/btn3min"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btn10min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/btn_10min"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/btn3min"
        app:layout_constraintTop_toBottomOf="@+id/btn3min" />

    <Button
        android:id="@+id/btn5min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/btn_5min"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/btn10min"
        app:layout_constraintEnd_toStartOf="@+id/btn10min"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="@+id/btn1min"
        app:layout_constraintTop_toBottomOf="@+id/btn1min"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imgCalmDown"
        android:layout_width="101dp"
        android:layout_height="216dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/calm_down" />

    <ImageView
        android:id="@+id/imgTimeIsUp"
        android:layout_width="150dp"
        android:layout_height="270dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnResetWhenStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.547"
        app:srcCompat="@drawable/time_is_up" />

    <EditText
        android:id="@+id/editTextSetMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Customize Minutes"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtTimer"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="@+id/txtTimer"
        app:layout_constraintTop_toBottomOf="@+id/txtTimer" />

    <Button
        android:id="@+id/btnConfirmMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/confirm_button_color"
        android:text="Confirm"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/editTextSetMinutes"
        app:layout_constraintTop_toBottomOf="@+id/editTextSetMinutes" />

</androidx.constraintlayout.widget.ConstraintLayout>